--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        fbq('track', 'AddToCart');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-       src="https://www.facebook.com/tr?id=423008876258131&ev=PageView&noscript=1"
+       src="https://www.facebook.com/tr?id=423008876258131&ev=AddToCart&noscript=1"
   /></noscript>
   <!-- End Meta Pixel Code -->
     
