--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 </div>
 </div>
-<p style="text-align: center; font-weight: bold; opacity: 35%; color: #000">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+<p style="text-align: center; font-weight: bold; color: #000">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
 </div>
 <script>
     function redirect() {
